--- a/signals/Makefile
+++ b/signals/Makefile
@@ -8,6 +8,9 @@ CFLAGS = -Wall -Werror -pedantic -std=gnu11
 LOCAL_LIBS = ../common
 LOCAL_HDRS = ../common
 
+pending1: common
+	$(CC) $(CFLAGS) -o pending1 -I$(LOCAL_HDRS) pending1.c $(LOCAL_LIBS)/common.a
+
 signalfd1: common
 	$(CC) $(CFLAGS) -o signalfd1 -I$(LOCAL_HDRS) signalfd1.c $(LOCAL_LIBS)/common.a
 
@@ -19,6 +22,7 @@ common:
 
 clean:
 	rm -f *.o
+	rm -f pending1
 	rm -f signalfd1
 	rm -f signalfd2
 	$(MAKE) -C $(LOCAL_LIBS) clean
