--- a/signals/Makefile
+++ b/signals/Makefile
@@ -8,6 +8,12 @@ CFLAGS = -Wall -Werror -pedantic -std=gnu11
 LOCAL_LIBS = ../common
 LOCAL_HDRS = ../common
 
+stop1: common spin1
+	$(CC) $(CFLAGS) -o stop1 -I$(LOCAL_HDRS) stop1.c $(LOCAL_LIBS)/common.a
+
+spin1: common
+	$(CC) $(CFLAGS) -o spin1 -I$(LOCAL_HDRS) spin1.c $(LOCAL_LIBS)/common.a
+
 pending1: common
 	$(CC) $(CFLAGS) -o pending1 -I$(LOCAL_HDRS) pending1.c $(LOCAL_LIBS)/common.a
 
@@ -31,6 +37,8 @@ common:
 
 clean:
 	rm -f *.o
+	rm -f stop1
+	rm -f spin1
 	rm -f pending1
 	rm -f suspend1
 	rm -f signalfd1
