--- a/servers/Makefile
+++ b/servers/Makefile
@@ -17,8 +17,8 @@ iterative: common
 forking: common
 	$(CC) $(CFLAGS) -o forking -I$(LOCAL_HDRS) forking.c util.c $(LOCAL_LIBS)/common.a
 
-preforking1: common
-	$(CC) $(CFLAGS) -o preforking1 -I$(LOCAL_HDRS) preforking1.c util.c $(LOCAL_LIBS)/common.a
+preforking: common
+	$(CC) $(CFLAGS) -o preforking -I$(LOCAL_HDRS) preforking.c util.c $(LOCAL_LIBS)/common.a
 
 common:
 	$(MAKE) -C $(LOCAL_LIBS)
@@ -28,7 +28,7 @@ clean:
 	rm -f client
 	rm -f iterative
 	rm -f forking
-	rm -f preforking1
+	rm -f preforking
 	$(MAKE) -C $(LOCAL_LIBS) clean
 
 
