--- a/servers/Makefile
+++ b/servers/Makefile
@@ -23,6 +23,9 @@ preforking: common
 threaded: common
 	$(CC) $(CFLAGS) -o threaded -pthread -I$(LOCAL_HDRS) threaded.c util.c $(LOCAL_LIBS)/common.a
 
+prethreaded1: common
+	$(CC) $(CFLAGS) -o prethreaded1 -pthread -I$(LOCAL_HDRS) prethreaded1.c util.c $(LOCAL_LIBS)/common.a
+
 common:
 	$(MAKE) -C $(LOCAL_LIBS)
 
@@ -33,6 +36,7 @@ clean:
 	rm -f forking
 	rm -f preforking
 	rm -f threaded
+	rm -f prethreaded1
 	$(MAKE) -C $(LOCAL_LIBS) clean
 
 .PHONY: clean
