messing with file descriptors

--- a/io/Makefile
+++ b/io/Makefile
@@ -20,6 +20,12 @@ open1: common
 open2: common
 	$(CC) $(CFLAGS) -o open2 -I$(LOCAL_HDRS) open2.c $(LOCAL_LIBS)/common.a
 
+open3: common
+	$(CC) $(CFLAGS) -o open3 -I$(LOCAL_HDRS) open3.c $(LOCAL_LIBS)/common.a
+
+open4: common
+	$(CC) $(CFLAGS) -o open4 -I$(LOCAL_HDRS) open4.c $(LOCAL_LIBS)/common.a
+
 hole: common
 	$(CC) $(CFLAGS) -o hole -I$(LOCAL_HDRS) hole.c $(LOCAL_LIBS)/common.a
 
@@ -32,6 +38,8 @@ clean:
 	rm -f share1
 	rm -f open1
 	rm -f open2
+	rm -f open3
+	rm -f open4
 	rm -f hole
 	$(MAKE) -C $(LOCAL_LIBS) clean
 
