--- a/numeric/Makefile
+++ b/numeric/Makefile
@@ -11,12 +11,16 @@ LOCAL_HDRS = ../common
 abs-tmin:
 	$(CC) $(CFLAGS) -o abs-tmin abs_tmin.c
 
+truncation:
+	$(CC) $(CFLAGS) -o truncation truncation.c
+
 common:
 	$(MAKE) -C $(LOCAL_LIBS)
 
 clean:
 	rm -f *.o
 	rm -f abs-tmin
+	rm -f truncation
 	$(MAKE) -C $(LOCAL_LIBS) clean
 
 
