--- a/io/Makefile
+++ b/io/Makefile
@@ -11,6 +11,9 @@ LOCAL_HDRS = ../common
 dup1: common
 	$(CC) $(CFLAGS) -o dup1 -I$(LOCAL_HDRS) dup1.c $(LOCAL_LIBS)/common.a
 
+dup2: common
+	$(CC) $(CFLAGS) -o dup2 -I$(LOCAL_HDRS) dup2.c $(LOCAL_LIBS)/common.a
+
 share1: common
 	$(CC) $(CFLAGS) -o share1 -I$(LOCAL_HDRS) share1.c $(LOCAL_LIBS)/common.a
 
@@ -35,6 +38,7 @@ common:
 clean:
 	rm -f *.o
 	rm -f dup1
+	rm -f dup2
 	rm -f share1
 	rm -f open1
 	rm -f open2
