--- a/process/Makefile
+++ b/process/Makefile
@@ -23,6 +23,9 @@ fork-file-sharing: common
 environ: common
 	$(CC) $(CFLAGS) -o environ -I$(LOCAL_HDRS) environ.c $(LOCAL_LIBS)/common.a
 
+exec1: common
+	$(CC) $(CFLAGS) -o exec1 -I$(LOCAL_HDRS) exec1.c $(LOCAL_LIBS)/common.a
+
 common:
 	$(MAKE) -C $(LOCAL_LIBS)
 
@@ -33,6 +36,7 @@ clean:
 	rm -f redirect1
 	rm -f fork-file-sharing
 	rm -f environ
+	rm -f exec1
 	$(MAKE) -C $(LOCAL_LIBS) clean
 
 
